--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Collection
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="well" id="data">Creating a horizontally centered container for our data</div>
+                <div class="well" id="data"></div>
 
             </div>
         </div>
