--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Assignment 1 - Data</a>
+                <a class="navbar-brand" href="#">Assignment 1 - Data1</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
